--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,11 +22,16 @@
 @import "site/social";
 @import "site/switcher";
 @import "site/element";
+@import "site/cat-input";
+@import "site/cat-radiobox";
+@import "site/cat-checkbox";
 
 @import "site/zel";
 
 @import "site/catalog";
 @import "site/additional";
+
+@import "site/select";
 
 
 
