--- a/sass/site/footer.scss
+++ b/sass/site/footer.scss
@@ -73,14 +73,17 @@
   }
 
   &--padding {
-    padding: 45px 0 35px 0;
+    padding: 55px 0 35px 0;
+    @media (min-width: $tablet) {
+      padding: 50px 0;
+    }
   }
   &--bg-grey {
     background-color: $secondary;
   }
   &--back {
     margin: 0 -20px;
-    @media (min-width: $mobile) {
+    @media (min-width: $tablet) {
       margin: 0 -30px;
     }
     @media (min-width: $desktop) {
