--- a/sass/site/mixins.scss
+++ b/sass/site/mixins.scss
@@ -1,3 +1,21 @@
+@mixin input-placeholder {
+  &.placeholder {
+    @content;
+  }
+  &:-moz-placeholder {
+    @content;
+  }
+  &::-moz-placeholder {
+    @content;
+  }
+  &:-ms-input-placeholder {
+    @content;
+  }
+  &::-webkit-input-placeholder {
+    @content;
+  }
+}
+
 @mixin font ($font-weight, $font-size, $line-height) {
   font: $font-weight #{$font-size}/#{$line-height} 'Oswald', sans-serif;
 }
