--- a/sass/site/select.scss
+++ b/sass/site/select.scss
@@ -153,10 +153,12 @@
     padding: 12px 13px;
     text-transform: uppercase;
     resize: none;
+    border: 1px solid rgba($diz, .5);
     @media (min-width: $tablet) {
       height: 174px;
     }
     &::placeholder {
+      color: $placeholder-color;
       @include font(normal, 16px, 18px);
       @media (min-width: $tablet) {
         @include font(normal, 20px, 20px);
