--- a/css/main.css
+++ b/css/main.css
@@ -57,20 +57,6 @@ a {
     z-index: 11;
     pointer-events: none;
     display: none; }
-    .maket__pos--mobile {
-      display: block; }
-      @media (min-width: 321px) {
-        .maket__pos--mobile {
-          display: none; } }
-    @media (min-width: 321px) {
-      .maket__pos--tablet {
-        display: block; } }
-    @media (min-width: 1440px) {
-      .maket__pos--tablet {
-        display: none; } }
-    @media (min-width: 1440px) {
-      .maket__pos--desktop {
-        display: block; } }
 
 .breakpoint {
   position: fixed;
@@ -83,11 +69,8 @@ a {
   z-index: 999;
   -webkit-transform: translate(25%, 25%);
           transform: translate(25%, 25%);
-  opacity: .5;
-  /*@media (min-width: $tablet) {
-    background-color: greenyellow;
-  }*/ }
-  @media (min-width: 321px) {
+  opacity: .5; }
+  @media (min-width: 768px) {
     .breakpoint {
       background-color: deeppink; } }
   @media (min-width: 1440px) {
@@ -522,27 +505,20 @@ h1 {
       .choose__label--indent {
         padding-left: 60px; } }
 
-.choose__text {
-  /*    height: 111px;
-    @media (min-width: $tablet) {
-      height: 156px;
-    }
-    @media (min-width: $desktop) {
-      padding-bottom: 22px;
-    }*/ }
-  .choose__text--indent {
-    padding-bottom: 20px; }
-    @media (min-width: 768px) {
-      .choose__text--indent {
-        padding-bottom: 60px; } }
-    @media (min-width: 1440px) {
-      .choose__text--indent {
-        padding-bottom: 22px; } }
-  .choose__text--border {
-    border-bottom: 1px solid #666666; }
-    @media (min-width: 768px) {
-      .choose__text--border {
-        border-bottom: none; } }
+.choose__text--indent {
+  padding-bottom: 20px; }
+  @media (min-width: 768px) {
+    .choose__text--indent {
+      padding-bottom: 60px; } }
+  @media (min-width: 1440px) {
+    .choose__text--indent {
+      padding-bottom: 22px; } }
+
+.choose__text--border {
+  border-bottom: 1px solid #666666; }
+  @media (min-width: 768px) {
+    .choose__text--border {
+      border-bottom: none; } }
 
 .choose__press {
   display: -webkit-box;
@@ -846,10 +822,7 @@ h1 {
       padding-left: 110px; } }
 
 .example--bg-grey {
-  background-color: #f2f2f2;
-  /*    @media (min-width: $tablet) {
-      background: rgba($secondary, .3);
-    }*/ }
+  background-color: #f2f2f2; }
 
 .map {
   position: relative; }
@@ -919,31 +892,6 @@ h1 {
 .form__container--size-big {
   border-radius: 25px; }
 
-/*
-.btn {
-  text-align: center;
-  @extend .h5;
-  cursor: pointer;
-  padding: 10px 0;
-  @media (min-width: $tablet) {
-    width: 250px;
-    padding: 10px 30px;
-    z-index: 1;
-  }
-
-  &-primary {
-    background-color: $primary;
-    color: $white;
-    transition: background $transition-time ease;
-    &:hover {
-      background-color: $primary-press;
-    }
-    &:active {
-      background-color: $primary-press;
-      color: rgba($white, .3);
-    }
-  }
-}*/
 .btn {
   text-align: center;
   display: inline-block;
@@ -1308,6 +1256,8 @@ h1 {
     position: absolute;
     top: 50%;
     right: 0;
+    width: 20px;
+    height: 20px;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%); }
     @media (min-width: 768px) {
@@ -1463,22 +1413,13 @@ h1 {
     .catalog__title--indent {
       padding-bottom: 10px; } }
 
-.catalog__items {
-  /*    &--indent {
-      @media (min-width: $tablet) {
-        padding-bottom: 70px;
-      }
-      @media (min-width: $desktop) {
-        padding-bottom: 80px;
-      }
-    }*/ }
-  @media (min-width: 768px) {
-    .catalog__items {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap; } }
+@media (min-width: 768px) {
+  .catalog__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; } }
 
 .catalog__item {
   width: 100%; }
@@ -1893,19 +1834,25 @@ h1 {
   width: 100%;
   padding: 12px 13px;
   text-transform: uppercase;
-  resize: none; }
+  resize: none;
+  border: 1px solid rgba(102, 102, 102, 0.5); }
   @media (min-width: 768px) {
     .select__textarea {
       height: 174px; } }
   .select__textarea::-webkit-input-placeholder {
+    color: #444444;
     font: normal 16px/18px "Oswald", sans-serif; }
   .select__textarea::-moz-placeholder {
+    color: #444444;
     font: normal 16px/18px "Oswald", sans-serif; }
   .select__textarea:-ms-input-placeholder {
+    color: #444444;
     font: normal 16px/18px "Oswald", sans-serif; }
   .select__textarea::-ms-input-placeholder {
+    color: #444444;
     font: normal 16px/18px "Oswald", sans-serif; }
   .select__textarea::placeholder {
+    color: #444444;
     font: normal 16px/18px "Oswald", sans-serif; }
     @media (min-width: 768px) {
       .select__textarea::-webkit-input-placeholder {
