--- a/sass/site/breakpoint.scss
+++ b/sass/site/breakpoint.scss
@@ -8,12 +8,9 @@
   z-index: 999;
   transform: translate(25%, 25%);
   opacity: .5;
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     background-color: deeppink;
   }
-  /*@media (min-width: $tablet) {
-    background-color: greenyellow;
-  }*/
   @media (min-width: $desktop) {
     background-color: aqua;
   }
