--- a/sass/site/cat-input.scss
+++ b/sass/site/cat-input.scss
@@ -35,8 +35,9 @@
     position: absolute;
     top: 50%;
     right: 0;
+    @include square-size(20px)
     transform: translate(-50%, -50%);
-    @media (min-width: $tablet ) {;
+    @media (min-width: $tablet ) {
       transform: translate(-100%, -50%);
     }
     .svg {
