--- a/sass/site/variables.scss
+++ b/sass/site/variables.scss
@@ -9,12 +9,14 @@ $black: #000000;
 
 $dop-color: #dcdcdc;
 $diz: #666666;
-//Sty;e
+
+//Style
 
 $primary-press: #5eaa2f;
 
 $input-color: #cdcdcd;
 $input-error: #ff8282;
+$placeholder-color: #444444;
 
 
 //grid
@@ -30,4 +32,4 @@ $desktop: 1440px;
 $transition-time: .2s;
 
 // Maket
-$maket-visible: 1; // 0 - Invisible | 1 - Visible
+$maket-visible: 0; // 0 - Invisible | 1 - Visible
