--- a/sass/site/select.scss
+++ b/sass/site/select.scss
@@ -37,6 +37,31 @@
       }
     }
   }
+  &__subpath {
+    position: relative;
+    &:before {
+      content: '';
+      position: absolute;
+      height: 3px;
+      background-color: $primary;
+      top: 50%;
+      transform: translateY(-50%);
+      left: 0;
+      right: -2000px;
+      @media (min-width: $tablet) {
+        left: -2000px;
+      }
+    }
+  }
+  &__subpath-name {
+    padding-right: 30px;
+    background-color: $white;
+    position: relative;
+    display: inline-block;
+    @media (min-width: $tablet) {
+      padding: 0 40px;
+    }
+  }
   &__desktop {
 
     @media (min-width: $desktop) {
@@ -101,12 +126,12 @@
       flex-grow: 1;
     }
     &--indent {
-      padding-bottom: 15px;
+      margin-bottom: 15px;
       @media (min-width: $tablet) {
-        padding-bottom: 20px;
+        margin-bottom: 20px;
       }
       &:last-child {
-        padding-bottom: 0;
+        margin-bottom: 0;
       }
     }
     &--amind {
@@ -121,7 +146,7 @@
     }
     &--bad {
       @media (min-width: $desktop) {
-        padding-bottom: 0;
+        margin-bottom: 0;
       }
     }
   }
