--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ a {
   max-width: 1440px;
   margin: 0 auto; }
   .content__warp {
+    overflow-x: hidden;
     padding: 0 20px; }
     @media (min-width: 768px) {
       .content__warp {
@@ -136,6 +137,11 @@ h1 {
         right: 0;
         left: 0;
         z-index: 2; } }
+  .header__warp--push {
+    margin: 0 -20px; }
+    @media (min-width: 768px) {
+      .header__warp--push {
+        margin: 0; } }
   @media (min-width: 768px) {
     .header__warp--indent {
       padding-top: 25px; } }
@@ -219,9 +225,11 @@ h1 {
         display: inline-block; } }
 
 .nav {
+  width: 100%;
   text-align: center; }
   @media (min-width: 768px) {
     .nav {
+      width: auto;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex; } }
@@ -246,6 +254,13 @@ h1 {
           color: rgba(0, 0, 0, 0.3); }
         .nav__item.active {
           border-color: #68b738; } }
+    .nav__item--border {
+      border-right: 1px solid rgba(102, 102, 102, 0.5);
+      border-bottom: 1px solid rgba(102, 102, 102, 0.5);
+      border-left: 1px solid rgba(102, 102, 102, 0.5); }
+      @media (min-width: 768px) {
+        .nav__item--border {
+          border: none; } }
     @media (min-width: 1440px) {
       .nav__item--main {
         color: #ffffff;
@@ -330,7 +345,7 @@ h1 {
       text-align: start;
       height: auto;
       margin: 0;
-      padding-bottom: 40px; } }
+      padding-bottom: 45px; } }
 
 .main-sect__title--indent {
   padding-bottom: 20px; }
@@ -385,6 +400,11 @@ h1 {
   white-space: nowrap;
   position: relative;
   z-index: 1; }
+  @media (min-width: 768px) {
+    .main-sect__button {
+      -ms-flex-item-align: start;
+          align-self: flex-start;
+      padding: 12px 25px; } }
 
 @media (min-width: 1440px) {
   .choose__block {
@@ -1251,6 +1271,11 @@ h1 {
     @media (min-width: 1440px) {
       .cat-input__input {
         margin-left: 19px; } }
+    .cat-input__input--amind {
+      padding-right: 55px !important;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap; }
     .cat-input__input:invalid {
       border: 2px solid #ff8282; }
   .cat-input__icon-set {
@@ -1394,16 +1419,38 @@ h1 {
     .cat-checkbox__text--ml13 {
       margin-left: 13px; }
 
-.zel {
-  height: 370px; }
-  @media (min-width: 768px) {
-    .zel {
-      height: 340px; } }
-  @media (min-width: 1440px) {
-    .zel {
-      height: 100px; } }
-  .zel-400 {
-    height: 400px; }
+.zel__block {
+  height: 100px; }
+
+.zel-400 {
+  height: 400px; }
+
+.zel--border {
+  border: 1px solid; }
+
+.bg-red {
+  background: red; }
+
+.bg-orange {
+  background: orange; }
+
+.bg-yellow {
+  background: yellow; }
+
+.bg-green {
+  background: green; }
+
+.bg-cyan {
+  background: cyan; }
+
+.bg-blue {
+  background: blue; }
+
+.bg-violet {
+  background: violet; }
+
+.bg-yellowgreen {
+  background: yellowgreen; }
 
 .catalog__title--indent {
   padding-bottom: 35px; }
@@ -1610,6 +1657,9 @@ h1 {
   @media (min-width: 768px) {
     .additional__item-name {
       font: normal 20px/20px "Oswald", sans-serif; } }
+  @media (min-width: 1440px) {
+    .additional__item-name {
+      width: 55%; } }
   .additional__item-name--indent {
     padding-bottom: 10px; }
     @media (min-width: 768px) {
@@ -1623,6 +1673,11 @@ h1 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+  @media (min-width: 1440px) {
+    .additional__params {
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1; } }
   .additional__params--indent {
     padding-bottom: 13px; }
     @media (min-width: 768px) {
@@ -1632,6 +1687,10 @@ h1 {
 @media (min-width: 768px) {
   .additional__description--indent {
     padding-right: 60px; } }
+
+@media (min-width: 1440px) {
+  .additional__description--indent {
+    padding-right: 55px; } }
 
 .additional__button {
   margin: 0 auto;
@@ -1852,10 +1911,12 @@ h1 {
     .select__item--indent:last-child {
       margin-bottom: 0; }
   @media (min-width: 1440px) {
-    .select__item--amind:first-child {
-      margin-right: 20px; }
-    .select__item--amind:last-child {
-      margin-left: 20px; } }
+    .select__item--amind {
+      width: 50%; }
+      .select__item--amind:first-child {
+        margin-right: 20px; }
+      .select__item--amind:last-child {
+        margin-left: 20px; } }
   @media (min-width: 1440px) {
     .select__item--bad {
       margin-bottom: 0; } }
@@ -1931,10 +1992,10 @@ h1 {
   margin: 35px 0 30px 0; }
   @media (min-width: 768px) {
     .select__check--indent {
-      margin: 55px 0 20px 0; } }
+      margin: 35px 0 25px 0; } }
   @media (min-width: 1440px) {
     .select__check--indent {
-      margin: 60px 0; } }
+      margin: 45px 0; } }
 
 @media (min-width: 768px) {
   .select__tablet {
@@ -1988,6 +2049,22 @@ h1 {
     @media (min-width: 768px) {
       .select__button--indent {
         margin-bottom: 0; } }
+
+.grid__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.grid__col-3 {
+  width: 25%; }
+
+.grid__col-4 {
+  width: 33.3333%; }
+
+.grid__col-9 {
+  width: 75%; }
 
 .footer__block {
   display: -webkit-box;
