--- a/sass/site/cat-input.scss
+++ b/sass/site/cat-input.scss
@@ -25,7 +25,12 @@
     @media (min-width: $desktop ) {
       margin-left: 19px;
     }
-
+    &--amind {
+      padding-right: 55px !important;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
     &:invalid {
       border: 2px solid $input-error;
     }
