--- a/sass/site/header.scss
+++ b/sass/site/header.scss
@@ -14,6 +14,12 @@
         z-index: 2;
       }
     }
+    &--push {
+      margin: 0 -20px;
+      @media (min-width: $tablet) {
+        margin: 0;
+      }
+    }
     &--indent {
       @media (min-width: $tablet) {
         padding-top: 25px;
