--- a/sass/site/zel.scss
+++ b/sass/site/zel.scss
@@ -1,12 +1,20 @@
 .zel {
-  height: 370px;
-  @media (min-width: $tablet ) {
-    height: 340px;
-  }
-  @media (min-width: $desktop ) {
+  &__block {
     height: 100px;
   }
+
   &-400 {
     height: 400px;
+  }
+  &--border {
+    border: 1px solid;
+  }
+}
+
+$colors: red, orange, yellow, green, cyan, blue, violet, yellowgreen;
+
+@each $color in $colors {
+  .bg-#{$color} {
+    background : $color;
   }
 }
