--- a/css/main.css
+++ b/css/main.css
@@ -2050,7 +2050,7 @@ h1 {
       .select__button--indent {
         margin-bottom: 0; } }
 
-.grid__items {
+.grid__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
